# trama

./: .bandit-baseline.json  .gitattributes  .gitignore  .secrets.baseline  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml  task.md
.github/: pull_request_template.md
docs/: ABI_VM_V1.md  AUTO_HOSPEDAGEM_V1_0_5.md  BASELINE_V2_1_2.md  BYTECODE_V1.md  CLI_NATIVA_V2_CONTRATOS.md  GOVERNANCA_CONTRIBUICAO_V2_1_0.md  GUIA_AUTO_HOSPEDAGEM_V1_0.md  GUIA_CODEBASE_GRANDE_V2_1_1.md  LINGUAGEM_V0_1.md  LINGUAGEM_V0_2.md  LINGUAGEM_V0_3.md  LINGUAGEM_V0_4.md  LINGUAGEM_V0_5.md  LINGUAGEM_V0_6.md  LINGUAGEM_V0_7.md  LINGUAGEM_V0_8.md  LINGUAGEM_V0_9.md  LINGUAGEM_V1_1.md  LINGUAGEM_V1_2.md  LINGUAGEM_V1_3.md  LINGUAGEM_V1_4.md  LINGUAGEM_V1_5_V1_8.md  LINGUAGEM_V2_0.md  LINGUAGEM_V2_0_1.md  LINGUAGEM_V2_0_2.md  LINGUAGEM_V2_0_3.md  LINGUAGEM_V2_0_4.md  LINGUAGEM_V2_0_5.md  LINGUAGEM_V2_0_6.md  LINGUAGEM_V2_0_7.md  LINGUAGEM_V2_0_8.md  LINGUAGEM_V2_0_9.md  LINGUAGEM_V2_1_0.md  LINGUAGEM_V2_1_1.md  LINGUAGEM_V2_1_11.md  LINGUAGEM_V2_1_17.md  LINGUAGEM_V2_1_2.md  LINGUAGEM_V2_1_3.md  MANUAL_COMPLETO_ATE_V0_4.md  MANUAL_COMPLETO_ATE_V0_6.md  (+37 more)
examples/: 01_ola_mundo.trm  05_colecoes_e_json.trm  06_importe_modulo.trm  07_async_tarefas.trm  09_http_cliente.trm  11_web_handler_dinamico.trm  12_segurança_jwt_rbac.trm  14_fila_jobs.trm  15_db_sqlite_basico.trm  16_migracoes_e_sementes.trm  18_selfhost_compilar_arquivo.trm  README_EXEMPLOS.md  funcoes.trm  ola_mundo.trm
exemplos/: 02_funcoes_e_closure.trm  03_controle_fluxo.trm  04_tente_pegue_finalmente.trm  08_io_arquivos.trm  10_web_basico.trm  13_observabilidade.trm  17_query_builder_orm.trm  18_selfhost_compilar_arquivo.trm  README_EXEMPLOS.md  condicional.trm
native/: README.md  runtime_stub.c  trama_native.c
scripts/: build_native_stub.sh  build_release_nativo.sh  build_release_selfhost.sh  build_selfhost.sh  build_standalone.sh  init_apt_repo.sh  (+8 more)
(+472 files in other folders)
