[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "trama"
version = "0.3.0"
description = "Linguagem em português compilada para bytecode com VM própria"
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "nullkalahar", email = "nullkalahar@users.noreply.github.com" }
]
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.5"
]
pack = [
  "pyinstaller>=6.0"
]

[project.scripts]
trama = "trama.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
