[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "trama"
version = "2.1.3"
description = "Linguagem em português compilada para bytecode com VM própria"
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "nullkalahar", email = "nullkalahar@users.noreply.github.com" }
]
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "ruff>=0.5",
  "bandit[toml]>=1.7",
  "pip-audit>=2.7",
  "detect-secrets>=1.5"
]
pack = [
  "pyinstaller>=6.0"
]
db = [
  "asyncpg>=0.29"
]
security = [
  "bcrypt>=4.1",
  "argon2-cffi>=23.1"
]
media = [
  "Pillow>=10.0"
]
storage = [
  "boto3>=1.34"
]

[project.scripts]
trama = "trama.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.bandit]
exclude_dirs = ["tests", ".venv", "build", "dist", ".local"]
skips = ["B101"]
